--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="fragment_main_event_content_description">Picture of an event</string>
+    <string name="day">Day</string>
+    <string name="room">Room</string>
 </resources>
