--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="room">Room</string>
     <string name="settings_tag_analytics_enabled">analytics_enabled</string>
     <string name="settings_tag_analytics_interval">analytics_enabled</string>
+    <string name="debug_date_enabled">debug_date_enable</string>
+    <string name="debug_date_setting">dabug_date_setting</string>
     <array name="polling_intervals">
         <item>100</item>
         <item>75</item>
