--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="debug_date_enabled">debug_date_enable</string>
     <string name="debug_date_setting">dabug_date_setting</string>
     <string name="debug_notifications_schedule">debug_notifications_schedule</string>
+    <string name="announcement_show_old">announcement_show_old</string>
     <array name="polling_intervals">
         <item>100</item>
         <item>75</item>
