added setting to change the notification time before a favourited event was happening

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="debug_date_setting">dabug_date_setting</string>
     <string name="debug_notifications_schedule">debug_notifications_schedule</string>
     <string name="announcement_show_old">announcement_show_old</string>
+    <string name="notification_time_extra">notifications_time_extra</string>
     <array name="polling_intervals">
         <item>100</item>
         <item>75</item>
