add additional services button to nav

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -294,6 +294,7 @@
     <string name="event_feedback_comment_header">Anything else you would like us to know?</string>
     <string name="event_feedback_rate_title">How would you rate this event?</string>
     <string name="event_feedback_anonymous_help">Your feedback will be submitted anonymously. Any comments will be manually reviewed and may be forwarded to the host / panelist. Hateful language or insults will not be forwarded.</string>
+    <string name="navigation_drawer_item_additional_services">Additional Services</string>
 
     <array name="polling_intervals">
         <item>100</item>
